include/raiapi2_c.h

typedef struct rai_session_s    * rai_session_t;
typedef struct rai_dict_s       * rai_dict_t;
typedef struct rai_entitle_s    * rai_entitle_t;
typedef struct rai_args_s       * rai_args_t;
/* error: pointer to a static { status, reason, module } record, NULL = ok */
typedef const struct rai_error_s * rai_err_t;
/* ---- output stream callback (RaiMsg.Print, Args.addDefaults) ---------- */
/* return bytes consumed; return 0 to signal a broken pipe */
typedef uint32_t (*rai_write_fn)( void *closure,  const uint8_t *buf,
                                  uint32_t len );
/* ---- RaiDict ---------------------------------------------------------- */
RAIAPI2_C_EXP rai_err_t rai_dict_load( rai_dict_t d,  uint32_t timeout_secs,
                                       const char *dict_subject,
                                       int load_wait );
RAIAPI2_C_EXP int       rai_dict_have_dict( rai_dict_t d );
RAIAPI2_C_EXP int       rai_dict_in_progress( rai_dict_t d );
RAIAPI2_C_EXP rai_session_t rai_dict_get_session( rai_dict_t d );
/* ---- RaiEntitlement --------------------------------------------------- */
RAIAPI2_C_EXP void      rai_entitle_delete( rai_entitle_t e );
RAIAPI2_C_EXP rai_args_t rai_args_create( void );
RAIAPI2_C_EXP void      rai_args_delete( rai_args_t a );
/* the strings are copied; def may be NULL for string args */
RAIAPI2_C_EXP rai_err_t rai_args_add_string( rai_args_t a,  const char *name,
                                             const char *def,
                                             const char *example,
                                             const char *descr,  int flags );
RAIAPI2_C_EXP rai_err_t rai_args_add_bool( rai_args_t a,  const char *name,
                                           int def,  const char *example,
                                           const char *descr,  int flags );
RAIAPI2_C_EXP rai_err_t rai_args_add_int( rai_args_t a,  const char *name,
                                          uint32_t def,  const char *example,
                                          const char *descr,  int flags );
RAIAPI2_C_EXP rai_err_t rai_args_add_double( rai_args_t a,  const char *name,
                                             double def,  const char *example,
                                             const char *descr,  int flags );
/* out_fn receives help/version output; NULL -> stderr */
RAIAPI2_C_EXP rai_err_t rai_args_add_defaults( rai_args_t a,  const char *vers,
                                               const char *prefix,
                                               rai_write_fn out_fn,
                                               void *out_cl,
                                               const char *argv0 );
/* returns 0 when -help / -version handled and the program should exit */
RAIAPI2_C_EXP rai_err_t rai_args_process( rai_args_t a,  int argc,
                                          const char **argv,  int *ok );
RAIAPI2_C_EXP uint32_t  rai_args_num_values( rai_args_t a,  const char *n );
RAIAPI2_C_EXP rai_err_t rai_args_get_string( rai_args_t a,  const char *n,
                                             uint32_t i,  const char **val );
RAIAPI2_C_EXP rai_err_t rai_args_get_bool( rai_args_t a,  const char *n,
                                           uint32_t i,  int *val );
RAIAPI2_C_EXP rai_err_t rai_args_get_int( rai_args_t a,  const char *n,
                                          uint32_t i,  uint32_t *val );
RAIAPI2_C_EXP rai_err_t rai_args_get_double( rai_args_t a,  const char *n,
                                             uint32_t i,  double *val );
RAIAPI2_C_EXP rai_err_t rai_args_set_string( rai_args_t a,  const char *n,
                                             const char *val );
RAIAPI2_C_EXP rai_err_t rai_args_set_bool( rai_args_t a,  const char *n,
                                           int val );
RAIAPI2_C_EXP rai_err_t rai_args_set_int( rai_args_t a,  const char *n,
                                          uint32_t val );
RAIAPI2_C_EXP rai_err_t rai_args_set_double( rai_args_t a,  const char *n,
                                             double val );
RAIAPI2_C_EXP int       rai_args_is_set( rai_args_t a,  const char *n );
/* ---- Time ------------------------------------------------------------- */
RAIAPI2_C_EXP int64_t   rai_time_current_ns( void );
RAIAPI2_C_EXP int64_t   rai_time_hires_ns( void );
RAIAPI2_C_EXP int64_t   rai_time_hires_to_ns( int64_t hires );
/* buf must be >= 64 bytes; ns == 0 -> now */
RAIAPI2_C_EXP const char * rai_time_ns_timestamp( int64_t ns,  int precision,
                                                  char *buf,  uint32_t len );
RAIAPI2_C_EXP const char * rai_time_ns_interval( int64_t ns,  char *buf,
                                                 uint32_t len );
RAIAPI2_C_EXP const char * rai_time_strftime( int tz,  int64_t ms,
                                              const char *fmt,  char *buf,
                                              uint32_t len );
/* TimeRotate: state is carried by the caller (mirrors the Java class) */
typedef struct rai_time_rotate_s {
  int64_t time, period, last_time;
  int     day_or_week;  /* 0 unspecified, 1 daily, 2 weekly */
} rai_time_rotate_t;
RAIAPI2_C_EXP int rai_time_rotate_set_time( rai_time_rotate_t *r,
                                            const char *spec,  int rot_dow,
                                            int64_t rot_time );
RAIAPI2_C_EXP int rai_time_rotate_set_period( rai_time_rotate_t *r,
                                              const char *spec,
                                              int64_t rot_period );