src/raiapi/dotnet/RaiApi2/Native.cs


  /* ---- RaiDict / RaiEntitlement ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_dict_load( IntPtr d,  uint timeout_secs,  string dict_subject,  int load_wait );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_dict_have_dict( IntPtr d );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_dict_in_progress( IntPtr d );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_dict_get_session( IntPtr d );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_entitle_delete( IntPtr e );

  /* ---- Args ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_create();
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_args_delete( IntPtr a );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_add_string( IntPtr a,  string name,  string def,  string example,  string descr,  int flags );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_add_bool( IntPtr a,  string name,  int def,  string example,  string descr,  int flags );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_add_int( IntPtr a,  string name,  uint def,  string example,  string descr,  int flags );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_add_double( IntPtr a,  string name,  double def,  string example,  string descr,  int flags );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_add_defaults( IntPtr a,  string vers,  string prefix,  WriteFn out_fn,  IntPtr out_cl,  string argv0 );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_process( IntPtr a,  int argc,  string[] argv,  out int ok );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_args_num_values( IntPtr a,  string n );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_get_string( IntPtr a,  string n,  uint i,  out IntPtr val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_get_bool( IntPtr a,  string n,  uint i,  out int val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_get_int( IntPtr a,  string n,  uint i,  out uint val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_get_double( IntPtr a,  string n,  uint i,  out double val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_set_string( IntPtr a,  string n,  string val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_set_bool( IntPtr a,  string n,  int val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_set_int( IntPtr a,  string n,  uint val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_args_set_double( IntPtr a,  string n,  double val );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_args_is_set( IntPtr a,  string n );

  /* ---- Time ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern long rai_time_current_ns();
  [DllImport( Lib, CallingConvention = CC )] internal static extern long rai_time_hires_ns();
  [DllImport( Lib, CallingConvention = CC )] internal static extern long rai_time_hires_to_ns( long hires );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_time_ns_timestamp( long ns,  int precision,  StringBuilder buf,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_time_ns_interval( long ns,  StringBuilder buf,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_time_strftime( int tz,  long ms,  string fmt,  StringBuilder buf,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_time_rotate_set_time( ref TimeRotateState r,  string spec,  int rot_dow,  long rot_time );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_time_rotate_set_period( ref TimeRotateState r,  string spec,  long rot_period );
